# django-pwa

./: .coverage  .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE.md  MANIFEST.in  Pipfile  README.md  coverage.xml  hatch.toml  manage.py  pyproject.toml  requirements-dev.txt  ruff_defaults.toml  runtests.py  setup.py  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: release.yml  test.yml
pwa/: __init__.py  app_settings.py  apps.py  urls.py  views.py
pwa/templates/: manifest.json  offline.html  pwa.html  serviceworker.js  serviceworker.tmpl
pwa/templatetags/: pwa.py
src/pwa/: _compat.py  urls.py  views.py
src/pwa/static/images/icons/: Thumbs.db
src/pwa/templates/: manifest.json  pwa.html  serviceworker.js
testproj/: settings.py  urls.py  wsgi.py
testproj/core/: apps.py  urls.py  views.py
testproj/core/templates/core/: index.html
tests/: settings.py  test_settings_attr.py  test_template_tag_meta.py  test_view.py
