[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "django-pwa"
dynamic = ["version"]
description = "A Django app to include a manifest.json and Service Worker instance to enable progressive web app behavior"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Silvio Luis", email = "silviolleite@gmail.com" }]
maintainers = [{ name = "Christian Hartung", email = "hartungstenio@outlook.com" }]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
requires-python = ">=3.8"
dependencies = ["django>=3.2"]

[project.urls]
Repository = "http://github.com/silviolleite/django-pwa"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
packages = ["/pwa", "/tests"]

[tool.hatch.build.targets.wheel]
packages = ["/pwa"]

[tool.ruff]
extend = "ruff_defaults.toml"

[tool.ruff.lint]
extend-select = ["DJ"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/test_*.py" = ["PT"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"
