[build-system]
requires = ["hatch-vcs", "hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-pwa"
dynamic = ["version"]
description = "A Django app to include a manifest.json and Service Worker instance to enable progressive web app behavior"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Silvio Luis", email = "silviolleite@gmail.com" }]
maintainers = [
  { name = "Christian Hartung", email = "hartungstenio@outlook.com" }
]
classifiers = [
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.0",
  "Framework :: Django :: 4.1",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
  "Framework :: Django :: 5.2",
  "Framework :: Django :: 6.0",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
requires-python = ">=3.8"
dependencies = ["django>=3.2"]

[project.urls]
Issues = "http://github.com/silviolleite/django-pwa/issues"
Repository = "http://github.com/silviolleite/django-pwa"

[dependency-groups]
dev = [
  "coverage[toml]>=6.5",
  "deptry",
  "faker",
  "gunicorn",
  "pre-commit",
  "pytest",
  "pytest-django",
]

[tool.coverage.run]
source_pkgs = ["pwa", "tests"]
branch = true
parallel = true

[tool.coverage.paths]
pwa = ["src/pwa", "*/django-pwa/src/pwa"]
tests = ["tests", "*/django-pwa/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.deptry]
known_first_party = ["pwa"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "testproj.settings"
pythonpath = [".", "src"]

[tool.hatch.build.targets.sdist]
exclude = ["/.devcontainer", "/.github"]

[tool.hatch.build.targets.wheel]
packages = ["src/pwa"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.default]
dependency-groups = ["dev"]

[tool.hatch.envs.default.scripts]
deps = "deptry ."
lint = "pre-commit run -a -v"
update = "pre-commit autoupdate"
check = [
  "deps",
  "lint",
]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[tool.hatch.envs.hatch-static-analysis]
config-path = "ruff_defaults.toml"
dependencies = ["ruff==0.15.4"]

[tool.hatch.envs.hatch-test]
dependencies = [ # TODO(@hartungstenio): remove this setting after dropping support for Python 3.9
  "coverage-enable-subprocess",
  "coverage[toml]",
  "pytest",
  "pytest-mock",
  "pytest-randomly",
  "pytest-rerunfailures",
  "pytest-xdist[psutil]",
]
extra-dependencies = [
  "pytest-django",
]

[tool.hatch.envs.hatch-test.overrides]
matrix.django.dependencies = [
  { value = "django>=3.2,<4.0", if = ["3.2"] },
  { value = "django>=4.0,<4.1", if = ["4.0"] },
  { value = "django>=4.1,<4.2", if = ["4.1"] },
  { value = "django>=4.2,<5.0", if = ["4.2"] },
  { value = "django>=5.0,<5.1", if = ["5.0"] },
  { value = "django>=5.1,<5.2", if = ["5.1"] },
  { value = "django>=5.2,<6.0", if = ["5.2"] },
  { value = "django>=6.0,<6.1", if = ["6.0"] },
]

[[tool.hatch.envs.hatch-test.matrix]]
django = ["3.2"]
python = ["3.8", "3.9", "3.10"]

[[tool.hatch.envs.hatch-test.matrix]]
django = ["4.0"]
python = ["3.8", "3.9", "3.10"]

[[tool.hatch.envs.hatch-test.matrix]]
django = ["4.1"]
python = ["3.8", "3.9", "3.10", "3.11"]

[[tool.hatch.envs.hatch-test.matrix]]
django = ["4.2"]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[[tool.hatch.envs.hatch-test.matrix]]
django = ["5.0"]
python = ["3.10", "3.11", "3.12"]

[[tool.hatch.envs.hatch-test.matrix]]
django = ["5.1"]
python = ["3.10", "3.11", "3.12", "3.13"]

[[tool.hatch.envs.hatch-test.matrix]]
django = ["5.2"]
python = ["3.10", "3.11", "3.12", "3.13", "3.14"]

[[tool.hatch.envs.hatch-test.matrix]]
django = ["6.0"]
python = ["3.12", "3.13", "3.14"]

[tool.ruff]
extend = "ruff_defaults.toml"

[tool.ruff.lint]
extend-select = ["DJ"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"
